- enable shellExecute for WIndows - automatic Windows dll update with admin rights - if automatic update is not possible (too old DLL) then give detailed instructions for DLL update - consistent default values for "reset to defaults" - new default help path for windows / block for virtual folders